@@ -2,6 +2,8 @@
 
 	* dmidecode.c: Handle ambiguous processor family value 0x30
 	  (DMI type 4).
+	* dmidecode.c: Prevent unlikely array overrun when decoding
+	  processor family value 0xBE (DMI type 4).
 
 2010-11-11  Jean Delvare  <khali@linux-fr.org>
 
